# badmintonSim

./: .gitignore  Dockerfile  README.md  app.py  badSim.py
RESTBackend/: badminton.db  crud.py  database.py  db.py  main.py  mainAI.py  matches.db  projEnums.py  render.yaml  requirements.txt
RESTBackend/localDist/: badsimengine-0.2.0-py3-none-any.whl
RESTBackend/sql/: createTable_events.sql  createTable_matches.sql  insert_matches.sql  select_match.sql  select_matchesINP.sql
RESTBackend/tests/: test_matches.py
examples/: Game1.py  README.md  deskApp.py  projSetup.py
examples/LeDEV/: projSetup.py
simEngine/: pyproject.toml  setup.cfg  setup.py
simEngine/src/simEngine/: badmintonDouble.py
simEngine/src/simengine.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
