[metadata]
name = badsimengine
version = 0.2.0
author = Praketa S
description = Badminton Sim Engine
long_description = file: README.md
long_description_content_type = text/markdown
license = Unlicense
classifiers =
    Programming Language :: Python :: 

[options]
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src
